--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 		<h1 >
 		Andre Garner
 		</h1>
-		<li><a href="welcome1.html"> Welcome</a></li>
+		<li><a href="index.html"> Welcome</a></li>
 		<li><a href="skills.html"> Skills</a></li>
 	    
 		<p>
