--- a/skills.html
+++ b/skills.html
@@ -14,6 +14,7 @@
 		Andre Garner
 		</h1>
 		<li><a href="welcome1.html"> Welcome</a></li>
+		<li><a href="index.html"> Welcome</a></li>
 		<li><a href="contact.html"> ContactInformation</a></li>
 		<p>
 		HTML
